src/test/deca/context/invalid/created/rule3.41/typenonclass.deca
// Résultat erreur:
//    Appel de méthode sur un type non-classe (règle 3.41)
//
// Description:
//    Tests de programme incorrect contextuellement (appel de méthode sur un type non-classe)
//
// Auteur:
//    grand manitou
//
// Historique:
//    Créé le 22/01/2024

class MaClasse {
    int aymeric = 0;
    
    int getNombre() {
        return 5;
    }

}

{
    int i = 1;
    i.aymeric;
}
